Swager Annotation has added for Register,Login and Logout.
